--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "aos": "^2.3.4",
     "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
+    "bootstrap-icons": "^1.11.3",
     "lucide-react": "^0.473.0",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.7",
